--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.2",
     "forever": "^4.0.1",
     "ip": "^1.1.5",
+    "mongoose": "^6.1.5",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0"
