--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "express-unless": "^1.0.0",
     "forever": "^4.0.1",
     "ip": "^1.1.5",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "socket.io": "^4.4.0"
   }
 }
