--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.12"
+    "vue-3-socket.io": "^1.0.4",
+    "vue-router": "^4.0.12",
+    "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
