--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -23,6 +24,7 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0",
+    "passport.socketio": "^3.7.0",
     "socket.io": "^4.4.0"
   }
 }
