--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -1,16 +1,12 @@
 {
-  "dependencies": {
-    "vue": "^3.2.25"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
-    "vite": "^2.7.2"
-  },
-  "name": "my-project",
+  "name": "frontend-vite",
+  "version": "0.0.0",
   "scripts": {
-    "build": "vite build",
     "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "version": "0.0.0"
+  "devDependencies": {
+    "vite": "^2.7.2"
+  }
 }
