--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -6,7 +6,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "vue": "^3.2.25"
+  },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^2.0.0",
     "vite": "^2.7.2"
   }
 }
