--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.6.8",
     "socket.io-client": "^4.4.1",
     "socketio": "^1.0.0",
     "vue": "^3.2.25",
